--- a/teams-u14g-match-report.html
+++ b/teams-u14g-match-report.html
@@ -11,6 +11,7 @@
     else if (window.location.search.includes('id=r09')) jQuery('#r09').show();
     else if (window.location.search.includes('id=r10')) jQuery('#r10').show();
     else if (window.location.search.includes('id=r11')) jQuery('#r11').show();
+    else if (window.location.search.includes('id=r12')) jQuery('#r12').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -389,6 +390,47 @@
     I am extremely proud of the girls, again they held strong in the face of incredible pressure and adversity, again they did not give in and made the
     opposition earn every possession for four quarters of football. North Ringwood took the points, but the way our girls stood up, I am convinced we too had a
     victory.
+  </p>
+</div>
+<div id="r12" style="display: none">
+  <h3>Round 12</h3>
+  <p>
+    A cold morning saw Leah lead the team out away to Blackburn. We knew going into this game that Blackburn was going to really put the pressure on us as we
+    sit just above them on the standings. And come out hard they did! The girls had to be on their game to ensure we were not steam-rolled early on. With our
+    regular runner, Nick being delayed, stand-in runner Lily was called upon early to go out there and ensure our defenders were marking their forwards tightly.
+    And again, soon after she ran out there to let Fenix know how good her early goal was. A close first quarter indicative of how close this game was going to
+    be.&nbsp;
+  </p>
+  <p>
+    The second quarter saw Matilda come off the bench to score a goal and Ava too putting one between the sticks to give us a 17-point buffer going into the
+    main break. On the scoreboard this looked like a good lead, but we knew that the scoreboard was not a true picture of how close this game really was.&nbsp;
+  </p>
+  <p>
+    The third quarter saw Blackburn deep in attack, with most of the quarter played in the goal square. Our defence somehow kept them at bay. The pressure was
+    non-stop, and we were lucky not to concede on more than a couple of occasions.&nbsp;
+  </p>
+  <p>
+    The fourth quarter started out much the same as the third, with the ball in the Blackburn goal square early on in the quarter. At about the halfway mark of
+    the quarter, we were able to move the ball up the ground and the arm wrestle moved to the middle of the ground. &nbsp;
+  </p>
+  <p>
+    It was a big team effort to keep Blackburn scoreless in the second half of the game. The scoreboard was not indicative of their determination and the
+    pressure that we had to withstand.&nbsp;
+  </p>
+  <p>
+    Leah was inspirational as captain and controlled the centre of the ground. Lexie left it all on the pitch with another big game in the ruck. Great
+    contributions from Raelene who played in the back line and ruck. Strong play from Tori and Clara who fed the ball into the forward line. Pippa, Gypsy,
+    Anouk, Ruby and Summer going up and down the ground to help move the ball forward and coming back to bolster the defence. Ella, Kyra and Shayla holding
+    strong in the backline and Jess and Gemma rotating through on-ball positions to give the rovers much-needed reprieve.&nbsp;
+  </p>
+  <p>
+    Thanks to Amy noting tactical requirements and making effective recommendations as we rotated players through the bench. This tactical approach was
+    instrumental in the team victory. Nick again for putting our plan out to the girls on the ground. Paul did great work mentoring the coaches and acting as
+    trainer. Bec, the ever-reliable manager for keeping the sanity on the bench.&nbsp;
+  </p>
+  <p>
+    Last week at training, Lexie stated she wanted the team to sing its song this week. And she was one of the loudest voices as we sang our song with gusto
+    after a great win.&nbsp;
   </p>
 </div>
 <div id="not-found" style="display: none">
