--- a/teams-u15b-match-report.html
+++ b/teams-u15b-match-report.html
@@ -11,6 +11,7 @@
     else if (window.location.search.includes('id=r09')) jQuery('#r09').show();
     else if (window.location.search.includes('id=r10')) jQuery('#r10').show();
     else if (window.location.search.includes('id=r11')) jQuery('#r11').show();
+    else if (window.location.search.includes('id=r12')) jQuery('#r12').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -180,6 +181,21 @@
     next week before we have a week off to catch our breath before the last two games of the season.&nbsp;
   </p>
   <p>Better players: Tommy, Koby, Jacob, Jordan, Izaac, Xavier and Oscar.&nbsp;</p>
+</div>
+<div id="r12" style="display: none">
+  <h3>Round 12</h3>
+  <p>
+    This week the team was able to train prior to the Bayswater Seniors, and enjoy some time together, with the Senior club putting on some food and drinks
+    after training. After an enjoyable Thursday evening, we ventured out to take on Lysterfield in one of the biggest games of the season for us. With plenty of
+    rain and sunshine, the team got off to a fantastic start kicking the first goal of the game. As the first quarter rolled on I felt that we maintained
+    control of the game but were unlucky not to be a few goals ahead at the quarter time break. During the second quarter, we dominated possession but like last
+    week, kicked to many points and not enough goals. At half time we got together and discussed where we needed to improve to take the game off Lysterfield. In
+    the third term we kicked away for a healthy lead and didn't let Lysterfield score a goal which was really pleasing. With some great passing and passages of
+    play, we marched on with the game to take out a 42 point win. Over the past three weeks, the boys have been playing some awesome football and have deserved
+    the three consecutive wins. I am really excited to see what we can do as we head into the last couple games of the season. Enjoy the week off and see you
+    all for a home game against Wantirna South.
+  </p>
+  <p>Better players: Tommy, Jordan, Blake, Xavier, Koby, Axel and Brodie. &nbsp; &nbsp;</p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
