--- a/teams-u15b.html
+++ b/teams-u15b.html
@@ -61,5 +61,6 @@
     <li><a href="/u15b-match-report/?id=r09" rel="nofollow">Round 9 Match Report</a></li>
     <li><a href="/u15b-match-report/?id=r10" rel="nofollow">Round 10 Match Report</a></li>
     <li><a href="/u15b-match-report/?id=r11" rel="nofollow">Round 11 Match Report</a></li>
+    <li><a href="/u15b-match-report/?id=r12" rel="nofollow">Round 12 Match Report</a></li>
   </ul>
 </div>
