--- a/teams-u13b-match-report.html
+++ b/teams-u13b-match-report.html
@@ -8,6 +8,7 @@
     else if (window.location.search.includes('id=r06')) jQuery('#r06').show();
     else if (window.location.search.includes('id=r07')) jQuery('#r07').show();
     else if (window.location.search.includes('id=r08')) jQuery('#r08').show();
+    else if (window.location.search.includes('id=r13')) jQuery('#r13').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -226,6 +227,10 @@
     and it's great to see his focus and determination to get better for himself and his team mates.&nbsp;
   </p>
   <p>Good luck boys stay focused and let's start preparing for next week.</p>
+</div>
+<div id="r13" style="display: none">
+  <h3>Round 13</h3>
+  <p>This round was a BYE</p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
