--- a/teams-u13b.html
+++ b/teams-u13b.html
@@ -55,5 +55,6 @@
     <li><a href="/u13b-match-report/?id=r06" rel="nofollow">Round 6 Match Report</a></li>
     <li><a href="/u13b-match-report/?id=r07" rel="nofollow">Round 7 Match Report</a></li>
     <li><a href="/u13b-match-report/?id=r08" rel="nofollow">Round 8 Match Report</a></li>
+    <li><a href="/u13b-match-report/?id=r13" rel="nofollow">Round 13 Match Report</a></li>
   </ul>
 </div>
