--- a/teams-u14g-match-report.html
+++ b/teams-u14g-match-report.html
@@ -12,6 +12,7 @@
     else if (window.location.search.includes('id=r10')) jQuery('#r10').show();
     else if (window.location.search.includes('id=r11')) jQuery('#r11').show();
     else if (window.location.search.includes('id=r12')) jQuery('#r12').show();
+    else if (window.location.search.includes('id=r13')) jQuery('#r13').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -431,6 +432,46 @@
   <p>
     Last week at training, Lexie stated she wanted the team to sing its song this week. And she was one of the loudest voices as we sang our song with gusto
     after a great win.&nbsp;
+  </p>
+</div>
+<div id="r13" style="display: none">
+  <h3>Round 13</h3>
+  <p>
+    A cold morning saw Pippa and Ruby lead a depleted list against a full The Basin squad. We knew this was going to be a big game and we were aware that the
+    ladder leaders probably were of the belief that they were going to claim an easy four points from us. With four extra players on their bench, they had more
+    than just home-ground advantage. The girls were aware of the task ahead of them but were not daunted. They knew that I had faith in them, and they knew they
+    were not going to put their heads down and capitulate. Not without giving it a red-hot go. The girls ran out to prove they had the will to take the game up
+    any team. &nbsp;
+  </p>
+  <p>
+    The game was a great credit to the girls who were determined not to give away an easy win. The whole game was played with great energy and intensity. We had
+    our chances, as did they, to put a few goals on the board, but both teams were determined not to let the other take control.&nbsp;
+  </p>
+  <p>
+    Our stand-in runner Lily was in the action early reminding players to mark their opponents closely, and to not allow easy possession, especially in key
+    areas.&nbsp;
+  </p>
+  <p>The wet heavy conditions made it very difficult to score. With every possession contested, any score was hard to come by. &nbsp;</p>
+  <p>
+    Being stifled by no bench to rotate our players through, Amy and I had to rely on our on-field rotations to rest our players, moving them from off ball to
+    on ball positions to allow some reprieve. Raelene and Tori helped Lexie in the ruck, while Matilda and Leah rotated with Jess and Fenix in the on-ball
+    positions. Ava moving from forward to centre and Ella coming off the back line to centre half forward. Shayla moved from the back line to full forward with
+    great effect. Clara moved from centre to full back. Summer moved from back line to wing and Anouk and Gypsy moved from wings to forward roles.&nbsp;
+  </p>
+  <p>
+    The game was very close from start to finish. At half time they lead by less than a kick. The third quarter was a scoreless arm wrestle. The last quarter
+    was more of the same. We had our chances as did they, with no team able to add substantially to their tally for most of the quarter. Our tired legs after a
+    long hard game in the wet against twenty players saw The Basin scramble a goal in the last minute and a half to take a hard-earned victory. &nbsp;
+  </p>
+  <p>
+    This is what we can do with an undermanned side up against ladder leaders. If nothing else, today&rsquo;s display shows that these girls are a special
+    group, and I have no doubt this group will continue to improve.&nbsp;
+  </p>
+  <p>
+    A big thank-you to Amy again for her input, especially at times when rotations were needed, and options were tight. Paul, our reliable mentor and trainer
+    who filled the tactical gaps, and ensured our tired girls were not getting hurt. Bec, manager extraordinaire, reminding me to observe &lsquo;Silent
+    Round&rsquo; when I was getting somewhat less than silent. And a big thank-you to Lily, our stand-in runner, who did a wonderful job in Nick&rsquo;s absence
+    while he recovers from a cold.
   </p>
 </div>
 <div id="not-found" style="display: none">
