--- a/teams-u16g-match-report.html
+++ b/teams-u16g-match-report.html
@@ -12,6 +12,7 @@
     else if (window.location.search.includes('id=r10')) jQuery('#r10').show();
     else if (window.location.search.includes('id=r11')) jQuery('#r11').show();
     else if (window.location.search.includes('id=r12')) jQuery('#r12').show();
+    else if (window.location.search.includes('id=r13')) jQuery('#r13').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -227,6 +228,10 @@
   </p>
   <p>We went down 26-0.</p>
   <p>Best. Matilda, Keelie, Chloe, Shaylee, Riann, Gemma, Ella, Mia, Ella</p>
+</div>
+<div id="r13" style="display: none">
+  <h3>Round 13</h3>
+  <p>This round was a BYE</p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
