--- a/teams-u09m-match-report.html
+++ b/teams-u09m-match-report.html
@@ -11,6 +11,7 @@
     else if (window.location.search.includes('id=r09')) jQuery('#r09').show();
     else if (window.location.search.includes('id=r10')) jQuery('#r10').show();
     else if (window.location.search.includes('id=r11')) jQuery('#r11').show();
+    else if (window.location.search.includes('id=r13')) jQuery('#r13').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -248,6 +249,40 @@
   </p>
   <p>It was fantastic to celebrate our team&rsquo;s success at the round-up last night, great to see so many of the players and parents there!</p>
   <p>Congratulations to our players of the round Jett, Jack and Harvey and our Round Up Player T-Shirt awarded to Randall, Well done everyone!</p>
+</div>
+<div id="r13" style="display: none">
+  <h3>Round 13</h3>
+  <p>Well, that was certainly an experience of playing footy on a Melbourne winter&rsquo;s day!</p>
+  <p>
+    Well done to all the players and parent helpers who braved the cold, rainy, and muddy conditions. Most seemed to revel in the opportunity to splash about
+    and made the most of the weather. This was just our second chance to play a full ground game with standup tackling, and we are making improvements every
+    week. There&rsquo;s a lot for our young players to take in, and our team officials and coaches are also learning and adapting to the new format each week.
+  </p>
+  <p>
+    Our players made improvements in our kick-in setups and are gaining confidence in contesting the ball with the introduction of tackling. We will continue to
+    focus on developing this confidence and encouraging the players to understand that while they have a starting position at the ball up, there is freedom to
+    move through sections of the ground to defend and attack throughout the play.
+  </p>
+  <p>
+    Jett had some cracking moments throughout the game, delivering one of his best performances of the year. Declan handled the ruck role very well in the first
+    few quarters, as did Jack and Alyan in our full-back positions. Randall ran his heart out and had a significant impact on the contested ball around the
+    ground.
+  </p>
+  <p>
+    Learning all the positions will take time. Early on, we plan to give players a chance to play a few quarters in the same position to reduce confusion at
+    quarter time. It can be quite overwhelming running out to unfamiliar positions every quarter. The club and our coaches are committed to ensuring players get
+    equal opportunities to experience all positions on the ground. We have one game left this year, but next year, the format we have for these last three games
+    will continue in under 10s, with the non-competitive format and no scores shown during the game. This provides us with a fantastic opportunity to continue
+    developing our young players and providing a fun and engaging experience.
+  </p>
+  <p>
+    With just one training session left for this year, the plan is to have fun and celebrate the season we&rsquo;ve experienced together as a team. The ground
+    is quite waterlogged at the moment and there is a chance we may not be able to train, we will keep you updated. If it goes ahead, It&rsquo;s likely to be
+    another muddy delight for us all, so it would be a good idea to pack a towel and change of clothes.
+  </p>
+  <p>Really looking forward to seeing all the players on Friday night and to see out our last game of the year.</p>
+  <p>Cheers,</p>
+  <p>Dan, Scott, and Andrew</p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
