--- a/teams-u11m-match-report.html
+++ b/teams-u11m-match-report.html
@@ -12,6 +12,7 @@
     else if (window.location.search.includes('id=r10')) jQuery('#r10').show();
     else if (window.location.search.includes('id=r11')) jQuery('#r11').show();
     else if (window.location.search.includes('id=r12')) jQuery('#r12').show();
+    else if (window.location.search.includes('id=r13')) jQuery('#r13').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -370,6 +371,45 @@
     It was great to sing the song as a team, with our 50 gamer Levi in the middle of the circle getting a light squirt of water. I&rsquo;m looking forward to
     the chance to celebrate further milestones within the team over the remainder of the season. Great win team, well done!
   </p>
+  <p>Go Baysie!</p>
+</div>
+<div id="r13" style="display: none">
+  <h3>Round 13</h3>
+  <p>
+    Our round 13 game had us up against Blackburn for the first time this season. We had spoken briefly at training, before finishing up early due to issues
+    with lighting, about our last game and how we set up and worked as a team. We again reflected on this prior to the game to acknowledge how sticking to our
+    game plan and working as a team had a huge impact on getting the best out of everyone.
+  </p>
+  <p>
+    We were led out by Jasper as captain, and after a week off got straight back into our structure and playing a team game. We really controlled the game early
+    but just couldn&rsquo;t break through to hit the scoreboard but late in the first we finally got a goal which opened the floodgates for us as we quickly
+    added 2 more before quarter time. We continued to control the second and third quarter led strongly by our rock solid half back line who rarely let the ball
+    past them and were set up to perfection. Again Ben displayed outstanding leadership helping the team set up, while Josh O went to work and absolutely
+    dominated play from his positioning on the ground.
+  </p>
+  <p>
+    Our mids worked hard together to get the ball going our way, Josh B contested really hard in the ruck and across the ground getting to every contest, Jasper
+    played his role as a tough mid well by tackling hard and blocking well for his teammates, and Emmalee was strong in the contest and made some quick
+    handpasses perfectly to teammates to create space and get the ball moving our way.
+  </p>
+  <p>
+    Luckily we had the game locked away with a dominant first three quarters as Blackburn gained the momentum in the last and really showed us up. This was
+    highlighted by a dominant performance up forward by Mitchell, who we had lent them&hellip; (might be starting on the bench next game Mitch&hellip;) in all
+    seriousness however Mitchell had been playing a great game, so I&rsquo;ll blame Gordon for suggesting we lend him to Blackburn.
+  </p>
+  <p>
+    Gordon and I were thrilled with the performance, that&rsquo;s the second game in a row where we&rsquo;ve left feeling everyone had played their best game
+    for the season. Goes to show how important it is to play as a team and the impact it has in making the game seem easier for everyone.
+  </p>
+  <p>
+    A big thank you to Angus, Anmar, Wes and Mitchell for helping out Blackburn and making up numbers so as many of the kids could take the field as possible,
+    it was really appreciated and done with no fuss.
+  </p>
+  <p>
+    A huge thank you to our team officials who give up their time every week and to our parent helpers on the day, Dallas, Levi F and Archer&rsquo;s families
+    for helping to ensure our kids get to play and enjoy the game.
+  </p>
+  <p>It was great to sing the song as a team. Great win team, well done!</p>
   <p>Go Baysie!</p>
 </div>
 <div id="not-found" style="display: none">
