--- a/teams-u15b-match-report.html
+++ b/teams-u15b-match-report.html
@@ -12,6 +12,7 @@
     else if (window.location.search.includes('id=r10')) jQuery('#r10').show();
     else if (window.location.search.includes('id=r11')) jQuery('#r11').show();
     else if (window.location.search.includes('id=r12')) jQuery('#r12').show();
+    else if (window.location.search.includes('id=r13')) jQuery('#r13').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -196,6 +197,22 @@
     all for a home game against Wantirna South.
   </p>
   <p>Better players: Tommy, Jordan, Blake, Xavier, Koby, Axel and Brodie. &nbsp; &nbsp;</p>
+</div>
+<div id="r13" style="display: none">
+  <h3>Round 13</h3>
+  <p>
+    After a week off and three wins in a row, we got to the ground feeling ready to take on Wantirna South. After some rain during the morning, the ground was
+    extremely wet. We knew that it was going to be a slog and a low scoring game. As the first quarter got under way Wantirna South who won the toss, got the
+    jump on us and kicked the first goal within minutes. As the quarter rolled on, we worked really hard to kick two goals to Wantirna South&rsquo;s three by
+    quarter time. During the second quarter it was a really even battle with both teams continuing to work hard for their team mates. We went into the main
+    break being one point down. &nbsp;At half time we changed things up and strengthened our backline to reduce Wantirna South's scoring while they kicked into
+    the scoring end of the ground. This worked well and due to the pressure we put on them they kicked one goal for the quarter to our one goal. With only four
+    points in it at the final break, I was really confident that we would run all over them. Unfortunately, this wasn't the case, with Wantirna South kicking
+    away to beat us by 12 points. Although we didn't walk away with a win on the day, I couldn't be any prouder of the boys. They worked hard all day for each
+    other and really the result could have gone either way. One more game to go before we reset and get ready to take on Wantirna South in the first final in
+    two weeks time.&nbsp;
+  </p>
+  <p>Better players: Tommy, Bruce, Brodie, Xavier, Jacob and Tyler Willougby.</p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
