--- a/teams-u14g-match-report.html
+++ b/teams-u14g-match-report.html
@@ -13,6 +13,7 @@
     else if (window.location.search.includes('id=r11')) jQuery('#r11').show();
     else if (window.location.search.includes('id=r12')) jQuery('#r12').show();
     else if (window.location.search.includes('id=r13')) jQuery('#r13').show();
+    else if (window.location.search.includes('id=r14')) jQuery('#r14').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -472,6 +473,45 @@
     who filled the tactical gaps, and ensured our tired girls were not getting hurt. Bec, manager extraordinaire, reminding me to observe &lsquo;Silent
     Round&rsquo; when I was getting somewhat less than silent. And a big thank-you to Lily, our stand-in runner, who did a wonderful job in Nick&rsquo;s absence
     while he recovers from a cold.
+  </p>
+</div>
+<div id="r14" style="display: none">
+  <h3>Round 14</h3>
+  <p>
+    Matilda and Clara led the team out and away to East Ringwood. With our opponents one rung above us in the standings this was going to be another ripper of a
+    game.&nbsp;
+  </p>
+  <p>The first half was one-way traffic - East Ringwood&rsquo;s, with only inaccurate kicking keeping us in the game. &nbsp;</p>
+  <p>
+    We were giving away too many easy kicks in their forward line, and we were in danger of being walked over if the onslaught kept going. At half time, the
+    team was told that their effort needed to lift and although we were not in finals contention, we did not want to let the game get away from us like this. We
+    were in real danger of the floodgates being thrown open and being handed a resounding defeat. This team is capable of a lot more, and the girls agreed that
+    they needed to and would put in a stronger effort in the second half.&nbsp;
+  </p>
+  <p>
+    True to their word, the third quarter proved the girls&rsquo; determination and courage, because, to their credit, the girls came back strongly to be only
+    four points down at the three-quarter time siren.&nbsp;
+  </p>
+  <p>
+    The last stanza was another arm wrestle, a situation we have been in several times this season. The girls were on the attack most of the quarter, unlucky on
+    several occasions not to score goals. The girls never gave in and kept going, striving for that elusive goal, but time and luck were not on our side
+    today.&nbsp;
+  </p>
+  <p>
+    During the game, East Ringwood, who like us for most of the season, found themselves low on player numbers due injuries and no bench. We decided to drop a
+    player to match their on-field numbers, a gesture from our team that was not always extended to us during the season, but I believe the better sporting
+    decision. &nbsp;
+  </p>
+  <p>To East Ringwood&rsquo;s credit they held on to take the win. A great example of two evenly matched sides having a great final hit out for 2024.&nbsp;</p>
+  <p>
+    Thank-you to Amy for co-ordinating rotations and keeping fresh legs on the ground &ndash; something we were not used to. Paul, our mentor and trainer, made
+    sure the girls&rsquo; wellbeing was paramount, keeping an eye on a couple of girls who picked up knocks and twinges during the game. Bec, again the best
+    manager a team can have (, helping me stay cool when I called her on arrival at the ground, finding no-one there and thinking I was at the wrong oval). Nick
+    our runner back on board and clocking up the k&rsquo;s. Thank-you.&nbsp;
+  </p>
+  <p>
+    This year has been a real learning experience for me as a new coach, and I have enjoyed watching the girls progress as a team throughout the season.
+    Presentation night will not be an easy task with so many girls worthy of recognition and accolades for their efforts this year.&nbsp;
   </p>
 </div>
 <div id="not-found" style="display: none">
