--- a/teams-u15b-match-report.html
+++ b/teams-u15b-match-report.html
@@ -13,6 +13,7 @@
     else if (window.location.search.includes('id=r11')) jQuery('#r11').show();
     else if (window.location.search.includes('id=r12')) jQuery('#r12').show();
     else if (window.location.search.includes('id=r13')) jQuery('#r13').show();
+    else if (window.location.search.includes('id=r14')) jQuery('#r14').show();
     else jQuery('#not-found').show();
   });
 </script>
@@ -213,6 +214,37 @@
     two weeks time.&nbsp;
   </p>
   <p>Better players: Tommy, Bruce, Brodie, Xavier, Jacob and Tyler Willougby.</p>
+</div>
+<div id="r14" style="display: none">
+  <h3>Round 14</h3>
+  <p>
+    After a cold and wet week in Melbourne we were out to play our last game of the season against the top of the ladder team in Blackburn. After a couple tight
+    contests with them during the season already, I was using this game to give the kids an opportunity to play in positions that they normally don't play in.
+  </p>
+  <p>
+    As the game got under way, Blackburn were the first team to kick a major. After this, we got our hands on the ball and made it a really tight contest.
+    Brodie was the first to score a goal for us after he put on a wonderful tackle in the goal square.&nbsp;
+  </p>
+  <p>Throughout the remainder of the quarter it was an even contest. Ryan put himself in a great position to snap a goal deep in the forward line.</p>
+  <p>
+    The contest was no different in the second quarter and I don't think Blackburn were expecting such an even contest after they have had a good home and away
+    season. The boys linked up well and played as a united team and it was really good to see Izaac and Gus kick a goal each after working really hard
+    throughout the game.
+  </p>
+  <p>
+    During the third quarter, the contest was again even. Although Blackburn kicked a couple goals we defended really well and made it difficult for them to
+    trouble the scorers.&nbsp;
+  </p>
+  <p>
+    During the third quarter an incident happened as we know, which saw me make an easy decision in the end. I informed the boys that I wasn't going to tolerate
+    any of my players being hurt against the spirit of the game. It was at this time I cancelled the game.&nbsp;
+  </p>
+  <p>
+    Although the kids were disappointed to finish the game early they understood and stood by my decision. We must stand as one and not accept violence in
+    sport. We must protect our children and this is what I did today.&nbsp;
+  </p>
+  <p>Looking forward to finals next weekend against Wantirna South. I am sure that we will do the club and supporters proud.</p>
+  <p>Better players; Tommy, Brodie, Blake, Shev, Axel, Bruce and Cristian.&nbsp;</p>
 </div>
 <div id="not-found" style="display: none">
   <h3>Not Found</h3>
